testsuite/tests/parser/should_fail/NoNumericUnderscores.hs
{-# Language NoNumericUnderscores #-}

module NoNumericUnderscores where

f :: Int -> ()
f 1_000 = ()
f _   = ()

